--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,16 @@ p {
   .tab-contents {
 	margin-top: 20px;
   }
-  
+  @media screen and (max-width: 1199px) {
+    #tab-select {
+        word-wrap: normal;
+        width: 100% !important;
+        padding: 10px;
+        background: #262261;
+        color: #fff;
+        font-size: 12px;
+    }
+}
   @media screen and (min-width: 640px) {
 	.tab-button-outer {
 	  position: relative;
