--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,9 @@
 body{
   background-color: #fff;
 }
-
+a{
+  text-decoration: none;
+}
 h2{
   font-family: "Mulish", sans-serif;
    color: #262261;
