--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,9 +91,9 @@ p {
   top: 0%;
   left: 0%;
 }
-.border-r{
-  border-right: 1px solid #21212167;
-}
+/* .border-r{
+  border-right: 1px solid #21212191;
+} */
 .en-form{
   background-color: #FAAF40;
   padding: 20px 0px;
@@ -111,12 +111,25 @@ p {
   text-align: center;
   padding: 20px;
 }
-
 .affi-box img{
-  width: 300px;
-  height: 200px;
+ width: 80%;
+ height: 100%;
+object-fit: contain;
+
+}
+.affi-box{
   padding: 25px;
   text-align: center;
+  position: relative;
+}
+.affi-box::after{
+  content: '';
+    height: 20%;
+    width: 1px;
+    position: absolute;
+    right: -10px;
+    top: 42%;
+    background-color: #2121213b;
 }
 .footer{
   background-color: #22175C;
