--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ h2{
   font-family: "Mulish", sans-serif;
    color: #262261;
    text-transform: capitalize;
-   font-size: 40px !important;
+   font-size: 36px !important;
    text-align: center;
    padding-bottom: 10px;
    font-weight: 700;
@@ -140,6 +140,9 @@ object-fit: contain;
 .video-box{
   padding: 0px 20px;
 }
+.border-right{
+  border-right: 1px solid #00000088;
+}
 /* tab strats */
 #tab-button {
 	display: table;
@@ -151,7 +154,7 @@ object-fit: contain;
   }
   #tab-button li {
 	display: table-cell;
-	width: 20%;
+	width: 18%;
   }
   .tab-button-outer{
     margin-bottom: 30px;
@@ -167,16 +170,21 @@ object-fit: contain;
   font-size: 20px;
   font-weight: 600;
   font-family: "Genos", sans-serif;
-  }
+  border-image: linear-gradient(to left, #fff 0%, #0000005d 100%) 1;
+  border-width: 2px;
+  border-style: solid;
+  transition: 0.3s;
+}
   
   #tab-button li a:hover,
   #tab-button .is-active a {
 	border-bottom-color: transparent;
 	background: #262261;
   color:#fff;
+  border:none;
   }
   #tab-button li a{
-    margin-right: 10px;
+    margin-right: 50px;
 }
   .tab-contents {
 	padding: .5em 2em 1em;
@@ -229,6 +237,9 @@ object-fit: contain;
   .game-section .owl-dots {
       /* display: none; */
       text-align: center;
+  }
+  .g-section{
+    display: flex;
   }
   .game-section .items {
     margin: 0 15px 60px;
@@ -532,7 +543,12 @@ h2 {
   border-right: none;
   border-bottom: 1px solid #00000048;
 } */
+
 .affi-box::after{
   background-color: #fff;
+}
+.border-right{
+  border-right: none;
+  border-bottom: 1px solid #00000079;
 }
 }
