--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,12 @@ body{
 a{
   text-decoration: none;
 }
+.banner{
+  display: block;
+}
+.banner2{
+  display: none;
+}
 h2{
   font-family: "Mulish", sans-serif;
    color: #262261;
@@ -30,6 +36,22 @@ h4{
 }
 h3{
   font-family: "Be Vietnam Pro", sans-serif;
+}
+.modal-header {
+  z-index: 999;
+  right: 0;
+  border-bottom: 0;
+}
+.fs-5 {
+  font-size: 26px !important;
+  color: #fff;
+}
+.btn-close {
+ width: 30px;
+  height: 30px;
+}
+.modal-content{
+  background-color: #262261c7;
 }
 p {
   font-family: "Be Vietnam Pro", sans-serif;
@@ -383,16 +405,16 @@ object-fit: contain;
     }
     h3 {
       margin: 0 0 8px;
-      font-size: 19px;
-      line-height: 18px;
-    }
+      font-size: 18px;
+      line-height: 24px;
+  }
     .line-title {
       width: 250px;
     }
   
     /* -------- Landing page ------- */
     .game-section {
-      padding: 30px 15px 20px;
+      padding: 30px 5px 20px;
     }
     .game-section .items {
       margin: 0 10px 40px;
@@ -400,7 +422,7 @@ object-fit: contain;
       height: 280px;
     }
     .game-section .items.active {
-      width: 270px;
+      width: 520px;
       box-shadow: 6px 10px 10px rgba(0, 0, 0, 0.25);
       -webkit-box-shadow: 6px 10px 10px rgba(0, 0, 0, 0.25);
     }
@@ -408,6 +430,12 @@ object-fit: contain;
       padding: 0 14px 5px;
       transform: translateY(calc(100% - 42px));
       -webkit-transform: translateY(calc(100% - 42px));
+    }
+    .item-desc ul{
+      padding-left: 10px;
+    }
+    .item-desc ul li{
+      font-size: 13px;
     }
   }
 @media (min-width: 768px) and (max-width: 991px) {
@@ -508,6 +536,9 @@ p{
 .tab-contents {
   padding: 10px;
 } 
+.tab-contents ul li{
+  padding-top: 10px;
+}
 h2 {
  font-size: 22px !important;
 }
@@ -550,5 +581,18 @@ h2 {
 .border-right{
   border-right: none;
   border-bottom: 1px solid #00000079;
+}
+.banner2{
+  display: block;
+}
+.banner{
+  display: none;
+}
+.b-div{
+  position: relative;
+}
+.bb-text {
+  width:80%;
+  padding: 120px 20px 0px 64px;
 }
 }
