--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,12 @@ h4{
 h3{
   font-family: "Be Vietnam Pro", sans-serif;
 }
+.modal-body .form-control, .form-select{
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #fff;
+  color: #fff;
+}
 .modal-header {
   z-index: 999;
   right: 0;
@@ -122,7 +128,7 @@ p {
 }
 .top{
   background-color: #F9F9F9;
-  padding: 40px 0px;
+  padding: 30px 0px;
 }
 .btn-danger{
   border: none;
@@ -133,12 +139,12 @@ p {
   text-align: center;
   padding: 20px;
 }
-.affi-box img{
+/* .affi-box img{
  width: 80%;
  height: 100%;
 object-fit: contain;
 
-}
+} */
 .affi-box{
   padding: 25px;
   text-align: center;
@@ -222,10 +228,10 @@ object-fit: contain;
     #tab-select {
         word-wrap: normal;
         width: 100% !important;
-        padding: 10px;
+        padding: 15px;
         background: #262261;
         color: #fff;
-        font-size: 12px;
+        font-size: 14px;
     }
 }
   @media screen and (min-width: 640px) {
@@ -562,14 +568,12 @@ h2 {
   color: #fff;
   font-size: 24px;
 }
-.red-box {
+.red-box, .blue-box {
   padding:20px;
   height: 150px;
+  margin: 10px;
 }
-.blue-box{
-  padding:20px;
-  height: 150px;
-}
+
 /* .border-r, .b-b {
   border-right: none;
   border-bottom: 1px solid #00000048;
@@ -599,4 +603,11 @@ h2 {
   font-size: 10px;
   line-height: 15px;
 }
+.top-img, .affi-box{
+  border: 1px solid #0000001c;
+}
+/* .affi-box{
+  border-top: 1px solid #000;
+  padding: 20px;
+} */
 }
