--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,10 @@ h3{
   z-index: 999;
   right: 0;
   border-bottom: 0;
+  padding: 15px;
+}
+.modal-body{
+  padding: 0px 10px 20px 10px;
 }
 .fs-5 {
   font-size: 26px !important;
@@ -117,7 +121,7 @@ p {
   text-transform: uppercase;
 }
 .bb-text{
-  background-color: #262261c0;
+  background-color: #26226182;
   padding:  120px 20px 0px 140px;
   text-align: left;
   width: 30%;
@@ -448,7 +452,7 @@ object-fit: contain;
       padding-left: 10px;
     }
     .item-desc ul li{
-      font-size: 11px;
+      font-size: 10px;
     }
   }
 @media (min-width: 768px) and (max-width: 991px) {
@@ -525,7 +529,7 @@ object-fit: contain;
 	display: none;
 }
 p{
-  font-size: 13px;
+  font-size: 12px;
 }
 .footer {
   padding: 10px;
@@ -604,7 +608,7 @@ h2 {
 }
 .bb-text {
   width:80%;
-  padding: 120px 20px 0px 64px;
+  padding: 120px 20px 0px 49px;
 }
 .game-section h3 {
   font-size: 10px;
