--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,42 @@ p {
   text-align: center;
   padding: 20px;
 }
+.sticky-franchise-btn {
+  position: fixed;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  background: linear-gradient(
+    to right,
+    #262261,
+    #EE4036,
+    #262261
+  );
+  background-size: 200% auto;
+  color: white;
+  padding: 12px 25px;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 0 30px 30px 0;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  animation: shine 2s linear infinite;
+  z-index: 9999;
+}
+
+@keyframes shine {
+  0% {
+    background-position: 200% center;
+  }
+  100% {
+    background-position: 0 center;
+  }
+}
+
+.sticky-franchise-btn:hover {
+  /* transform: translateY(-50%) scale(1.05); */
+  color:#fff;
+  
+}
 /* .affi-box img{
  width: 80%;
  height: 100%;
