--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ p {
 .sticky-franchise-btn {
   position: fixed;
   top: 50%;
-  left: 0;
+  right: 0;
   transform: translateY(-50%);
   background: linear-gradient(
     to right,
@@ -166,7 +166,7 @@ p {
   padding: 12px 25px;
   font-weight: bold;
   text-decoration: none;
-  border-radius: 0 30px 30px 0;
+  border-radius: 30px 0px 0px 30px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
   animation: shine 2s linear infinite;
   z-index: 9999;
