--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,12 +116,14 @@ p {
 #star{
   color: #fff;
   font-family: "Mulish", sans-serif;
-  margin-top: 20px;
+  margin-top: 10px;
+  text-transform: uppercase;
 }
 #bus{
   color: #fff;
   font-size: 50px;
   text-transform: uppercase;
+  margin-top: 30px;
 }
 .bb-text{
   background-color: #26226182;
