--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -677,8 +677,8 @@ h2 {
   position: relative;
 }
 .bb-text {
-  width:80%;
-  padding: 120px 20px 0px 49px;
+  width:80% !important;
+  padding: 120px 20px 0px 49px !important;
 }
 .game-section h3 {
   font-size: 10px;
