--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,8 @@ p {
   background-color: #26226182;
   padding:  120px 20px 0px 140px;
   text-align: left;
-  width: 40%;
+  width: 100%;
+max-width: 40%;
   height: 100%;
   position: absolute;
   top: 0%;
@@ -696,6 +697,13 @@ h2 {
   padding: 20px;
 } */
 }
+@media (min-width: 1200px) and (max-width: 1400px) {
+  .bb-text {
+    width: 100%;
+    max-width: 80%;
+    
+}
+
 @media (max-width: 767px) {
   .mobile-footer {
     display: flex;
